// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`balance assets should be correct balance config 1`] = `
{
  "calc": [Function],
  "function": "account",
  "getParams": [Function],
  "pallet": "assets",
  "path": [
    "balance",
  ],
}
`;

exports[`balance assets should get correct params 1`] = `
[
  1,
  "<ACCOUNT>",
]
`;

exports[`balance min should be correct min config 1`] = `
{
  "function": "asset",
  "pallet": "assets",
  "params": [
    1,
  ],
  "path": [
    "minBalance",
  ],
}
`;

exports[`balance system should be correct system config 1`] = `
{
  "calc": [Function],
  "function": "account",
  "getParams": [Function],
  "pallet": "system",
  "path": [
    "data",
  ],
}
`;

exports[`balance system should get correct params 1`] = `
[
  "<ACCOUNT>",
]
`;

exports[`balance tokens should be correct balance config 1`] = `
{
  "calc": [Function],
  "function": "accounts",
  "getParams": [Function],
  "pallet": "tokens",
  "path": [],
}
`;

exports[`balance tokens should be correct params with ForeignAsset 1`] = `
[
  "<ACCOUNT>",
  {
    "ForeignAsset": 5,
  },
]
`;

exports[`balance tokens should be correct params with Token 1`] = `
[
  "<ACCOUNT>",
  {
    "Token": "MOVR",
  },
]
`;
